# HaProxy-sample

./: .gitignore  README.md  pyproject.toml
sample_backend/: manage.py
sample_backend/sample_backend/: asgi.py  settings.py  urls.py  wsgi.py
